namespaces/live.cloud-platform.service.justice.gov.uk/applying-service-standards-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applying-service-standards-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-intranet-and-justicesite"
    cloud-platform.justice.gov.uk/application: "Applying Service Standards"
    cloud-platform.justice.gov.uk/owner: "Central Digital: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/applying-service-standards"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: "2026-01-20"
